Solved some bugs with the delete button